# Arabic-VoC

./: .env.template  .gitignore  .pre-commit-config.yaml  .replit  AGENT_COMMITTEE_DESIGN_METHODOLOGY.md  AGENT_COMMITTEE_ENHANCEMENT_DOCUMENTATION.md  AGENT_COMMITTEE_SYSTEM.md  AI_CONFIGURATION_COMPLETE.md  AI_ROUTING_ENGINE.md  CLEANUP_COMPLETE.md  COMPREHENSIVE_TESTING_REPORT.md  CONSOLIDATION_UPDATE.md  CONTRIBUTING.md  CX_ARABIC_COMMITTEE_RESULTS.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMMANDS.md  DESIGN_SYSTEM_AUDIT_REPORT.md  DESIGN_SYSTEM_DOCUMENTATION.md  DESIGN_SYSTEM_VALIDATION_REPORT.md  DEVELOPER_HANDOFF.md  DEVOPS_QUICKSTART.md  DUPLICATION_CLEANUP_SUMMARY.md  Dockerfile  ENHANCED_AGENT_SYSTEM_SUMMARY.md  GITHUB_SETUP.md  INSTALL.md  MANIFEST.in  MIGRATION_SUMMARY.md  NAVIGATION_VERIFICATION_REPORT.md  PHASE1_SIMPLIFICATION_REPORT.md  PHASE2C_IMPLEMENTATION_LOG.md  PHASE2_ARCHITECTURE_OVERVIEW.md  PHASE2_FEATURE_IMPACT_ANALYSIS.md  PHASE2_SIMPLIFICATION_IMPLEMENTATION_PLAN.md  PHASE_1_IMPLEMENTATION_GUIDE.md  PLATFORM_EXPLAINED_SIMPLY.md  PLATFORM_RESTORATION_STATUS.md  Procfile  QUICKSTART.md  README.md  (+77 more)
.github/: README.md  pull_request_template.md
analytics/: __init__.py  routes_ai_analysis.py
api/: __init__.py  analytics.py  analytics_live.py  analytics_realtime.py  auth.py  contacts.py  dashboard_simplified.py  enhanced_analytics.py  executive_dashboard.py  feedback.py  feedback_agent.py  feedback_api_deprecated.py  feedback_collection.py  feedback_collection_complex.py  feedback_widget.py  integrations_status.py  professional_reports.py  survey_distribution.py  survey_hosting.py  survey_management.py  surveys.py  surveys_flask.py  surveys_unified.py  user_preferences.py  whatsapp_business.py
app/: __init__.py  main.py
attached_assets/: Pasted--Replit-Prompt-Arabic-VoC-Customer-Journey-Map-Builder-Create-an-interactive-Customer-Experience--1751550957578_1751550957587.txt  Pasted-1-Journey-Stage-Granularity-Yes-let-s-break-down-support-for-more-actionable-insights-pythonJOU-1751224649212_1751224649222.txt  Pasted-2-Enhanced-SentimentAnalysisAgent-pythonclass-SentimentAnalysisAgent-BaseAgent-def-init-s-1751222123192_1751222123195.txt  Pasted-DASHBOARD-SECTIONS-CHANNEL-PERFORMANCE-SENTIMENT-ANALYSIS-IMPLEMENTATION-SECTION-1--1753131937310_1753131937311.txt  Pasted-Enhanced-Committee-Orchestration-pythonclass-VoCAnalysisCommittee-def-init-self-s-1751222480406_1751222480408.txt  Pasted-Excellent-feedback-from-Replit-Let-me-address-each-question-to-ensure-we-build-this-right-Answers--1751224425775_1751224425777.txt  (+3 more)
auth/: __init__.py
core/: __init__.py  app.py  main.py
docs/: README.md  (+30 more)
(+314 files in other folders)
