# Simplified build system configuration to avoid uv build conflicts
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arabic-voc-platform"
version = "1.0.0"
description = "Arabic Voice of Customer Platform with AI-powered sentiment analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask",
    "flask-sqlalchemy", 
    "psycopg2-binary",
    "openai",
    "langchain",
    "langchain-openai",
    "langgraph", 
    "arabic-reshaper",
    "python-bidi",
    "gunicorn",
    "werkzeug",
    "jinja2",
    "pydantic",
    "aiofiles",
    "sqlalchemy",
    "uvicorn",
    "anthropic",
    "twilio",
    "flask-dance",
    "flask-login",
    "oauthlib",
    "pyjwt",
]

# Minimal configuration to avoid build conflicts
# Optional dependencies and tool configurations removed to prevent uv issues

[tool.setuptools]
packages = [".", "api", "auth", "core", "models", "routes", "utils"]
include-package-data = true
