[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arabic-voc-platform"
version = "1.0.0"
description = "Arabic Voice of Customer Platform with AI-powered sentiment analysis"
requires-python = ">=3.11"
dependencies = [
    "flask",
    "flask-sqlalchemy", 
    "psycopg2-binary",
    "openai",
    "arabic-reshaper",
    "python-bidi",
    "gunicorn",
    "werkzeug",
    "jinja2",
    "pydantic",
    "sqlalchemy",
    "anthropic",
    "twilio",
    "flask-dance",
    "flask-login",
    "oauthlib",
    "pyjwt",
]
