[build-system]
requires = ["setuptools>=60", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arabic-voc-platform"
version = "1.0.0"
description = "Arabic Voice of Customer Platform with AI-powered sentiment analysis"
requires-python = ">=3.11"
dependencies = [
    "flask>=2.3.0",
    "flask-sqlalchemy>=3.0.0", 
    "psycopg2-binary>=2.9.0",
    "openai>=1.0.0",
    "arabic-reshaper>=3.0.0",
    "python-bidi>=0.4.0",
    "gunicorn>=20.1.0",
    "werkzeug>=2.3.0",
    "jinja2>=3.1.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "anthropic>=0.25.0",
    "twilio>=8.0.0",
    "flask-dance>=7.0.0",
    "flask-login>=0.6.0",
    "oauthlib>=3.2.0",
    "pyjwt>=2.8.0",
]

[project.scripts]
start = "main:app"

[tool.setuptools]
packages = ["utils", "models", "api", "auth", "routes"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["templates/*", "static/*", "translations/*"]
